# libirc

./: Cargo.toml  LICENSE  README.md
irc/: Cargo.toml  irc_response_codes.csv
irc/src/: constants.rs  default_messages.rs  error.rs  helpme.rs  lib.rs  message.rs  test.rs
irc_derive/: Cargo.toml
irc_derive/src/: find.rs  lib.rs  methods.rs
libirc/: Cargo.toml
libirc/src/: constants.rs  default_messages.rs  error.rs  lib.rs  message.rs
libirc_derive/: Cargo.toml
libirc_derive/src/: lib.rs
src/: default_messages.rs  error.rs  irc.pest  lib.rs  message.rs
