[package]
name = "libirc"
version = "0.1.0"
authors = ["Michael Foley <mfoley@mfoley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
csv = "1"
libirc_derive = { path = "../libirc_derive" }
