[package]
name = "libirc_derive"
version = "0.1.0"
authors = ["Michael Foley <mfoley@mfoley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
#syn = "0.15.35"
quote = "0.6.12"

[dependencies.syn]
version = "0.15.35"
default-features = false
features = ["full", "derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"]
